# ipylogue

./: .gitignore  AUTHORS  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
example_profile/: history.sqlite  ipython_config.py  ipython_notebook_config.py
example_profile/security/: notebook_secret
ipylogue/: __init__.py  gitmanager.py
pitted/: __init__.py  gitmanager.py
